--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-# PORT = 3000
-PORT = https://chandana-motors-inventory-frontend.vercel.app/
+PORT = 3000
+# PORT = https://chandana-motors-inventory-frontend.vercel.app/
 MONGO_URI = mongodb+srv://arundeshan:XPURjjIX2QH2hUVU@cluster0.v0fmtte.mongodb.net/?retryWrites=true&w=majority
 SECRET = 2H4m3^qpCW924goIi23iG&
